--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,5 +10,6 @@
         <p>I call it unique call it's my special experience and it's just some random similarities with a person's story. it's what made me who I am toqday</p>
     <h3>Don't Give Up Session</h3>
     <p>Hoping this inspire someone out there!</p>
+    <p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p>
     </body>
 </html>
