--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,8 +3,21 @@
     <head>
         <title>My First Website</title>
     </head>
-    <body><blockquote class="twitter-tweet"><p lang="en" dir="ltr">You’re a Christian BUT<br><br>Worked your posting to another state,<br>You know different cheat codes,<br>You went to reduce your age,<br>You cheat in the exam hall,<br>You lie in your log book,<br>You falsify quotation,<br>And many more<br><br>See you didn’t die at the altar, you only fainted.<br>Go back &amp; DIE.</p>&mdash; Yanju shine (@YanjuShine) <a href="https://twitter.com/YanjuShine/status/1849427712064061702?ref_src=twsrc%5Etfw">October 24, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></body>
+    <header>
+        <ul>
+            <li>Timztech</li>
+        </ul>
+    </header>
+    <body>
+        <main>
+            <article></article>
+            <aside></aside>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">You’re a Christian BUT<br><br>Worked your posting to another state,<br>You know different cheat codes,<br>You went to reduce your age,<br>You cheat in the exam hall,<br>You lie in your log book,<br>You falsify quotation,<br>And many more<br><br>See you didn’t die at the altar, you only fainted.<br>Go back &amp; DIE.</p>&mdash; Yanju shine (@YanjuShine) <a href="https://twitter.com/YanjuShine/status/1849427712064061702?ref_src=twsrc%5Etfw">October 24, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </main>
+    </body>
     <nav>
         <a href="/index.html">Go back</a>
     </nav>
+    <footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a>  
+    </footer>
 </html>
