--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,12 +4,16 @@
         <title>My First Website</title>
     </head>
     <body>
+        <main>
+            <article>
         <h1>This is my Unique Story</h1>
         <p>Some would say I am just a random kid from Africa and there thousand of similar stories, so it doesn't worth a word "Unique"</p>
         <h2>The Best Part Of My Life</h2>
         <p>I call it unique call it's my special experience and it's just some random similarities with a person's story. it's what made me who I am toqday</p>
     <h3>Don't Give Up Session</h3>
-    <p>Hoping this inspire someone out there!</p>
-    <p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p>
+    <p>Hoping this inspire someone out there!</p></article>
+    <aside></aside><p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p></aside>
+</main>
     </body>
+    <footer></footer>
 </html>
