--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <header>
-            <h1>This is my Unique Story</h1>
-            <nav>
-                <a href="/tweets.html">Go back</a>
-            </nav>
+            <header>
+                <ul>
+                    <li><a href="/tweets.html">Go back</a></li>   
+                </ul>
         </header>
         <main>
             <article>
