--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -14,7 +14,6 @@
             </article>
             <aside></aside>
             </main>
-        <footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a> 
-        </footer>
+        <footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a></footer>
     </body>
 </html>
