--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -19,6 +19,6 @@
     <p>Hoping this inspire someone out there!</p></article>
     <aside><p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p></aside>
 </main>
-<footer></footer>
+<footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a></footer>
     </body>
 </html>
