--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,7 +4,6 @@
         <title>My First Website</title>
     </head>
     <body>
-        <header>
             <header>
                 <ul>
                     <li><a href="/tweets.html">Go back</a></li>   
@@ -17,7 +16,8 @@
         <p>I call it unique call it's my special experience and it's just some random similarities with a person's story. it's what made me who I am toqday</p>
     <h3>Don't Give Up Session</h3>
     <p>Hoping this inspire someone out there!</p></article>
-    <aside><p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p></aside>
+    <p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p>
+    <aside>placeholder to add comment thread later</aside>
 </main>
 <footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a></footer>
     </body>
