--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>My First Website</title>
-    </head>
-    <body>
-            <header>
-                <ul>
-                    <li><a href="/tweets.html">Go back</a></li>   
-                </ul>
-        </header>
-        <main>
-            <article>
-        <p>Some would say I am just a random kid from Africa and there thousand of similar stories, so it doesn't worth a word "Unique"</p>
-        <h2>The Best Part Of My Life</h2>
-        <p>I call it unique call it's my special experience and it's just some random similarities with a person's story. it's what made me who I am toqday</p>
-    <h3>Don't Give Up Session</h3>
-    <p>Hoping this inspire someone out there!</p></article>
-    <p>check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">picture</a></p>
-    <aside>placeholder to add comment thread later</aside>
-</main>
-<footer>Made by Timztech <a href="https://github.com/whizztimmy" target ="_blank">here</a></footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+</head>
+<body>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>Some would say I am just a random kid from Africa and there are thousands of similar stories, so it doesn't deserve the word "Unique."</p>
+            <h2>The Best Part Of My Life</h2>
+            <p>I call it unique because it's my special experience, and it just happens to share some random similarities with someone else's story. It's what made me who I am today.</p>
+            <h3>Don't Give Up Session</h3>
+            <p>Hoping this inspires someone out there!</p>
+            <p>Check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">picture</a>.</p>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by Timztech - <a href="https://github.com/whizztimmy" target="_blank">here</a>.</p>
+    </footer>
+</body>
 </html>
