--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,6 +20,37 @@
             <h3>Don't Give Up Session</h3>
             <p>Hoping this inspires someone out there!</p>
             <p>Check out this <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">picture</a>.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                <td>Michael</td>
+                <td>32</td>
+                <td>Australia</td>
+                </tr>
+                <tr>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>UK</td>
+                </td>
+            </tbody>
+        </table>
         </article>
         <aside>
             <p>placeholder to add comment thread later</p>
